--- a/css/contact_page.css
+++ b/css/contact_page.css
@@ -569,21 +569,17 @@ footer::before {
 @keyframes fadeInFromRight {
   from {
     opacity: 0;
-    transform: translateX(50px);
   }
   to {
     opacity: 1;
-    transform: translateX(0%);
   }
 }
 @keyframes fadeOutToLeft {
   from {
     opacity: 1;
-    transform: translateX(0%);
   }
   to {
     opacity: 0;
-    transform: translateX(-30px);
   }
 }
 @keyframes fadeInFromLeft {
@@ -608,6 +604,22 @@ footer::before {
   100% {
     object-position: right;
     opacity: 0;
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 /****************** PROFILES *******************/
